# rustr

./: Cargo.toml  LICENSE  Makefile.toml  README.md
src/: bstr.rs  cdawg.rs  commons.rs  dawg.rs  debruijn.rs  fib.rs  lcp.rs  lib.rs  lyndon.rs  lz77.rs  mus.rs  nss.rs  palindrome.rs  rlz.rs  sa.rs  stree_json.rs  strstat.rs  suffix_array.rs  suffix_tree.rs  suffix_trie.rs  utils.rs
src/suffix_array/: misc.rs  sais.rs  samm.rs
src/suffix_tree/: mod.rs  suffix_tree.rs  ukkonnen_vec_lib.rs  weiner.rs
