[package]
name = "rustr"
version = "0.1.0"
authors = ["kg86 <kg86@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "=3.0.0-beta.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# bstr = "0.2"
# permutohedron = "0.2"
rustdoc-katex-demo = "0.1.5"
